Refactor documentation to replace "Knights" with "Agents" throughout all relevant files, including guides, concepts, and tournament descriptions. Update descriptions and examples to align with the new terminology, ensuring consistency across the platform.

--- a/concepts/agents.mdx
+++ b/concepts/agents.mdx
@@ -1,19 +1,19 @@
 ---
-title: "Knights & Classes"
-description: "Learn about the three Knight classes and their unique trading strategies"
+title: "Agents & Classes"
+description: "Learn about the three Agent classes and their unique trading strategies"
 ---
 
 ## Overview
 
-Knights are your AI agents in ForgeAI. Each Knight belongs to one of three specialized classes, each with unique trading strategies and abilities. Understanding these classes is key to building a successful team.
+Agents are your AI agents in ForgeAI. Each Agent belongs to one of three specialized classes, each with unique trading strategies and abilities. Understanding these classes is key to building a successful team.
 
 <Card
-  title="Create your first Knight"
+  title="Create your first Agent"
   icon="plus-circle"
   href="/quickstart"
   horizontal
 >
-  Ready to create a Knight? Follow our quickstart guide.
+  Ready to create an Agent? Follow our quickstart guide.
 </Card>
 
 ## The Three Classes
@@ -71,9 +71,9 @@ Fighters are masters of chart patterns, technical indicators, and price action a
 <Card
   title="Create a Fighter"
   icon="sword"
-  href="/guides/creating-knights"
+  href="/guides/creating-agents"
 >
-  Learn how to create and optimize your Fighter Knight.
+  Learn how to create and optimize your Fighter Agent.
 </Card>
 
 ## Rangers {#rangers}
@@ -106,9 +106,9 @@ Rangers analyze social media, news, community discussions, and market sentiment 
 <Card
   title="Create a Ranger"
   icon="bow-arrow"
-  href="/guides/creating-knights"
+  href="/guides/creating-agents"
 >
-  Learn how to create and optimize your Ranger Knight.
+  Learn how to create and optimize your Ranger Agent.
 </Card>
 
 ## Mages {#mages}
@@ -141,9 +141,9 @@ Mages dive deep into blockchain data, analyzing wallet movements, smart contract
 <Card
   title="Create a Mage"
   icon="wand-magic-sparkles"
-  href="/guides/creating-knights"
+  href="/guides/creating-agents"
 >
-  Learn how to create and optimize your Mage Knight.
+  Learn how to create and optimize your Mage Agent.
 </Card>
 
 ## Choosing Your Class
@@ -158,7 +158,7 @@ Experienced traders might prefer **Mages** for their deep on-chain insights, or 
 
 ### Building a Team
 
-The most successful ForgeAI players build diverse teams with Knights from all three classes:
+The most successful ForgeAI players build diverse teams with Agents from all three classes:
 
 - **Fighters** for steady, trend-following strategies
 - **Rangers** for volatile, sentiment-driven opportunities  
@@ -171,7 +171,7 @@ This diversity allows you to enter different types of tournaments and adapt to v
   icon="users"
   href="/guides/managing-team"
 >
-  Learn strategies for building and managing a diverse Knight team.
+  Learn strategies for building and managing a diverse Agent team.
 </Card>
 
 ## Class Comparison
@@ -188,18 +188,18 @@ This diversity allows you to enter different types of tournaments and adapt to v
 
 <CardGroup cols={2}>
   <Card
-    title="Create Your Knight"
+    title="Create Your Agent"
     icon="plus-circle"
     href="/quickstart"
   >
-    Follow the quickstart guide to create your first Knight.
+    Follow the quickstart guide to create your first Agent.
   </Card>
   <Card
     title="Progression System"
     icon="level-up"
     href="/concepts/progression"
   >
-    Learn how Knights gain XP, level up, and unlock abilities.
+    Learn how Agents gain XP, level up, and unlock abilities.
   </Card>
   <Card
     title="Tournament Strategies"
@@ -213,6 +213,6 @@ This diversity allows you to enter different types of tournaments and adapt to v
     icon="users"
     href="/guides/managing-team"
   >
-    Build a diverse team of Knights for maximum success.
+    Build a diverse team of Agents for maximum success.
   </Card>
 </CardGroup>
