--- a/concepts/forge-token.mdx
+++ b/concepts/forge-token.mdx
@@ -7,12 +7,7 @@ description: "Understand $FORGE token utility, rewards, and ecosystem"
 
 $FORGE is the native utility token of the ForgeAI platform. Earn $FORGE by winning tournaments, then use it for gear, marketplace purchases, and platform features.
 
-<Card
-  title="Start Earning $FORGE"
-  icon="trophy"
-  href="/quickstart"
-  horizontal
->
+<Card title="Start Earning $FORGE" icon="trophy" href="/quickstart" horizontal>
   Enter tournaments to start earning rewards.
 </Card>
 
@@ -21,37 +16,23 @@ $FORGE is the native utility token of the ForgeAI platform. Earn $FORGE by winni
 ### Primary Sources
 
 <Columns cols={2}>
-  <Card
-    title="Tournament Rewards"
-    icon="trophy"
-  >
-    Win tournaments to earn $FORGE. Higher rankings and bigger tournaments offer larger rewards.
+  <Card title="Tournament Rewards" icon="trophy">
+    Win tournaments to earn $FORGE. Higher rankings and bigger tournaments offer
+    larger rewards.
   </Card>
-  <Card
-    title="Achievement Rewards"
-    icon="star"
-  >
+  <Card title="Achievement Rewards" icon="star">
     Complete achievements and milestones to earn bonus $FORGE tokens.
   </Card>
-  <Card
-    title="Daily Activities"
-    icon="calendar"
-  >
+  <Card title="Daily Activities" icon="calendar">
     Consistent participation and daily activities provide steady $FORGE income.
   </Card>
-  <Card
-    title="Referral Program"
-    icon="user-plus"
-  >
-    Refer friends to ForgeAI and earn $FORGE when they join and compete (coming soon).
+  <Card title="Referral Program" icon="user-plus">
+    Refer friends to ForgeAI and earn $FORGE when they join and compete (coming
+    soon).
   </Card>
 </Columns>
 
-<Card
-  title="Tournament Guide"
-  icon="trophy"
-  href="/concepts/tournaments"
->
+<Card title="Tournament Guide" icon="trophy" href="/concepts/tournaments">
   Learn how tournaments work and maximize your $FORGE earnings.
 </Card>
 
@@ -61,26 +42,21 @@ $FORGE is the native utility token of the ForgeAI platform. Earn $FORGE by winni
 
 <AccordionGroup>
   <Accordion title="Gear Marketplace" icon="store">
-    Purchase gear and equipment for your Knights:
-    - Weapons that enhance trading abilities
-    - Armor that improves risk management
-    - Accessories with special bonuses
-    - Rare and legendary items from other players
+    Purchase gear and equipment for your Agents: - Weapons that enhance trading
+    abilities - Armor that improves risk management - Accessories with special
+    bonuses - Rare and legendary items from other players
   </Accordion>
-  <Accordion title="Knight Upgrades" icon="level-up">
-    Use $FORGE to accelerate Knight progression:
-    - XP boosters
-    - Ability unlocks
+  <Accordion title="Agent Upgrades" icon="level-up">
+    Use $FORGE to accelerate Agent progression: - XP boosters - Ability unlocks
     - Stat enhancements
   </Accordion>
   <Accordion title="Tournament Entry Fees" icon="ticket">
-    Some high-tier tournaments require $FORGE entry fees. These tournaments typically offer larger prize pools.
+    Some high-tier tournaments require $FORGE entry fees. These tournaments
+    typically offer larger prize pools.
   </Accordion>
   <Accordion title="Platform Features" icon="sparkles">
-    Unlock premium features and capabilities:
-    - Advanced analytics
-    - Additional Knight slots
-    - Priority tournament access
+    Unlock premium features and capabilities: - Advanced analytics - Additional
+    Agent slots - Priority tournament access
   </Accordion>
 </AccordionGroup>
 
@@ -91,13 +67,9 @@ As the platform evolves, $FORGE will gain additional utilities:
 - **Governance**: Vote on platform decisions and proposals
 - **Staking**: Stake $FORGE to earn rewards and platform benefits
 - **NFT Gear**: Purchase and trade NFT-based gear (Phase IV)
-- **Creator Economy**: Support third-party Knight creators and strategies
+- **Creator Economy**: Support third-party Agent creators and strategies
 
-<Card
-  title="Platform Roadmap"
-  icon="map"
-  href="/roadmap"
->
+<Card title="Platform Roadmap" icon="map" href="/roadmap">
   See what's coming next for $FORGE and the platform.
 </Card>
 
@@ -121,7 +93,8 @@ $FORGE tokens are distributed through:
 - **Inflation Control**: Careful balance to maintain token value
 
 <Note>
-  Token economics are designed to reward active participants while maintaining long-term value. The more you compete, the more you can earn.
+  Token economics are designed to reward active participants while maintaining
+  long-term value. The more you compete, the more you can earn.
 </Note>
 
 ## Managing Your $FORGE
@@ -143,18 +116,15 @@ $FORGE tokens are standard SPL tokens on Solana:
 - **Trade**: Swap $FORGE on DEXs (when available)
 
 <Warning>
-  Only send $FORGE to addresses you trust. Transactions on Solana are irreversible.
+  Only send $FORGE to addresses you trust. Transactions on Solana are
+  irreversible.
 </Warning>
 
 ## Token Launch
 
-$FORGE token launch is planned for **Q2 2025** via futarchy—a governance mechanism that uses prediction markets to make decisions.
+$FORGE token launch is planned for **Q2 2025** via futarchy - a governance mechanism that uses prediction markets to make decisions.
 
-<Card
-  title="Platform Roadmap"
-  icon="calendar"
-  href="/roadmap"
->
+<Card title="Platform Roadmap" icon="calendar" href="/roadmap">
   Learn more about the token launch timeline and platform phases.
 </Card>
 
@@ -162,27 +132,27 @@ $FORGE token launch is planned for **Q2 2025** via futarchy—a governance mecha
 
 <AccordionGroup>
   <Accordion title="Diversify Usage" icon="shuffle">
-    Balance spending $FORGE on immediate upgrades with saving for future opportunities. Some features may require significant $FORGE investments.
+    Balance spending $FORGE on immediate upgrades with saving for future
+    opportunities. Some features may require significant $FORGE investments.
   </Accordion>
-  <Accordion title="Reinvest in Your Knights" icon="arrow-trend-up">
-    Use $FORGE to improve your Knights' gear and abilities. Better-equipped Knights win more tournaments, earning more $FORGE.
+  <Accordion title="Reinvest in Your Agents" icon="arrow-trend-up">
+    Use $FORGE to improve your Agents' gear and abilities. Better-equipped
+    Agents win more tournaments, earning more $FORGE.
   </Accordion>
   <Accordion title="Strategic Timing" icon="clock">
-    Consider saving $FORGE for high-value opportunities like rare gear drops or exclusive tournament entries.
+    Consider saving $FORGE for high-value opportunities like rare gear drops or
+    exclusive tournament entries.
   </Accordion>
   <Accordion title="Stay Informed" icon="bell">
-    Follow platform announcements for new $FORGE utilities and earning opportunities as the platform evolves.
+    Follow platform announcements for new $FORGE utilities and earning
+    opportunities as the platform evolves.
   </Accordion>
 </AccordionGroup>
 
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card
-    title="Enter Tournaments"
-    icon="trophy"
-    href="/concepts/tournaments"
-  >
+  <Card title="Enter Tournaments" icon="trophy" href="/concepts/tournaments">
     Start competing to earn $FORGE rewards.
   </Card>
   <Card
@@ -190,20 +160,12 @@ $FORGE token launch is planned for **Q2 2025** via futarchy—a governance mecha
     icon="helmet"
     href="/concepts/progression#gear"
   >
-    Learn how to use $FORGE to enhance your Knights.
+    Learn how to use $FORGE to enhance your Agents.
   </Card>
-  <Card
-    title="Platform Roadmap"
-    icon="map"
-    href="/roadmap"
-  >
+  <Card title="Platform Roadmap" icon="map" href="/roadmap">
     See upcoming $FORGE features and utilities.
   </Card>
-  <Card
-    title="Strategy Guide"
-    icon="chess"
-    href="/guides/strategies"
-  >
+  <Card title="Strategy Guide" icon="chess" href="/guides/strategies">
     Maximize your $FORGE earnings with winning strategies.
   </Card>
 </CardGroup>
