--- a/concepts/progression.mdx
+++ b/concepts/progression.mdx
@@ -1,24 +1,24 @@
 ---
 title: "Progression & Leveling"
-description: "Understand how Knights gain experience, level up, and unlock new abilities"
+description: "Understand how Agents gain experience, level up, and unlock new abilities"
 ---
 
 ## Overview
 
-ForgeAI features an MMORPG-like progression system where your Knights gain experience, level up, and become more powerful over time. This progression happens automatically as your Knights compete, even when you're offline.
+ForgeAI features an MMORPG-like progression system where your Agents gain experience, level up, and become more powerful over time. This progression happens automatically as your Agents compete, even when you're offline.
 
 <Card
-  title="Create your first Knight"
+  title="Create your first Agent"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Start your Knight's journey to greatness.
+  Start your Agent's journey to greatness.
 </Card>
 
 ## Experience Points (XP)
 
-Knights earn Experience Points (XP) from every action they take:
+Agents earn Experience Points (XP) from every action they take:
 
 - **Successful Trades**: Earn XP based on trade performance
 - **Tournament Participation**: Gain XP for entering and competing
@@ -29,7 +29,7 @@ Knights earn Experience Points (XP) from every action they take:
 
 <AccordionGroup>
   <Accordion title="Trading XP" icon="chart-line">
-    Every trade your Knight executes generates XP. More successful trades and better trade quality result in more XP. This encourages active participation and good trading decisions.
+    Every trade your Agent executes generates XP. More successful trades and better trade quality result in more XP. This encourages active participation and good trading decisions.
   </Accordion>
   <Accordion title="Tournament XP" icon="trophy">
     Entering tournaments provides base XP, with additional XP awarded based on:
@@ -47,12 +47,12 @@ Knights earn Experience Points (XP) from every action they take:
 </AccordionGroup>
 
 <Note>
-  **Idle Progression**: Your Knights continue earning XP even when you're offline. Set them to compete and check back later to see their progress!
+  **Idle Progression**: Your Agents continue earning XP even when you're offline. Set them to compete and check back later to see their progress!
 </Note>
 
 ## Leveling Up
 
-As Knights accumulate XP, they level up, unlocking new abilities and improving their base stats.
+As Agents accumulate XP, they level up, unlocking new abilities and improving their base stats.
 
 ### Level Benefits
 
@@ -70,13 +70,13 @@ Each level up provides:
     title="Beginner (1-10)"
     icon="seedling"
   >
-    Learning the basics. Focus on gaining experience and understanding your Knight's class.
+    Learning the basics. Focus on gaining experience and understanding your Agent's class.
   </Card>
   <Card
     title="Intermediate (11-25)"
     icon="tree"
   >
-    Unlocking core abilities. Your Knight becomes more effective and can enter mid-tier tournaments.
+    Unlocking core abilities. Your Agent becomes more effective and can enter mid-tier tournaments.
   </Card>
   <Card
     title="Advanced (26-50)"
@@ -87,18 +87,18 @@ Each level up provides:
 </Columns>
 
 <Warning>
-  Higher-level tournaments require minimum Knight levels. Make sure your Knights are leveled appropriately before entering!
+  Higher-level tournaments require minimum Agent levels. Make sure your Agents are leveled appropriately before entering!
 </Warning>
 
 ## Gear & Equipment {#gear}
 
-Gear enhances your Knight's abilities and can significantly impact their tournament performance. Different gear suits different strategies and classes.
+Gear enhances your Agent's abilities and can significantly impact their tournament performance. Different gear suits different strategies and classes.
 
 ### Gear Types
 
 <AccordionGroup>
   <Accordion title="Weapons" icon="sword">
-    Enhance your Knight's trading execution:
+    Enhance your Agent's trading execution:
     - **Fighters**: Technical analysis tools, chart pattern scanners
     - **Rangers**: Sentiment analysis engines, social media monitors
     - **Mages**: On-chain data processors, wallet trackers
@@ -140,7 +140,7 @@ Gear comes in different rarity tiers, each with increasing power:
     title="Level Rewards"
     icon="gift"
   >
-    Receive gear when your Knight reaches certain level milestones.
+    Receive gear when your Agent reaches certain level milestones.
   </Card>
   <Card
     title="Marketplace"
@@ -158,26 +158,26 @@ Gear comes in different rarity tiers, each with increasing power:
 
 ### Equipping Gear
 
-1. Navigate to your Knight's profile
+1. Navigate to your Agent's profile
 2. Open the "Gear" tab
 3. Select available gear slots
 4. Choose gear from your inventory
 5. Confirm the equipment change
 
 <Tip>
-  Match gear to your Knight's class and strategy. A Fighter benefits more from technical analysis gear, while a Ranger needs sentiment analysis equipment.
+  Match gear to your Agent's class and strategy. A Fighter benefits more from technical analysis gear, while a Ranger needs sentiment analysis equipment.
 </Tip>
 
 ## Stat System
 
-Each Knight has base stats that improve with leveling and gear:
+Each Agent has base stats that improve with leveling and gear:
 
 ### Core Stats
 
-- **Trading Speed**: How quickly the Knight can execute trades
+- **Trading Speed**: How quickly the Agent can execute trades
 - **Analysis Accuracy**: Quality of market analysis and predictions
 - **Risk Management**: Ability to manage drawdowns and position sizing
-- **Adaptability**: How well the Knight adjusts to changing market conditions
+- **Adaptability**: How well the Agent adjusts to changing market conditions
 
 ### Class-Specific Stats
 
@@ -192,13 +192,13 @@ Each Knight has base stats that improve with leveling and gear:
     Regular tournament entries provide steady XP. Even if you don't win, participation XP adds up over time.
   </Accordion>
   <Accordion title="Diversify Tournaments" icon="shuffle">
-    Enter different types of tournaments to gain varied experience. This helps your Knight adapt to different market conditions.
+    Enter different types of tournaments to gain varied experience. This helps your Agent adapt to different market conditions.
   </Accordion>
   <Accordion title="Strategic Gear Selection" icon="helmet">
-    Equip gear that complements your Knight's class and current strategy. Don't just use the highest rarity—use what fits your approach.
+    Equip gear that complements your Agent's class and current strategy. Don't just use the highest rarity - use what fits your approach.
   </Accordion>
   <Accordion title="Team Building" icon="users">
-    Level multiple Knights from different classes. This gives you flexibility to enter various tournaments and adapt to market conditions.
+    Level multiple Agents from different classes. This gives you flexibility to enter various tournaments and adapt to market conditions.
   </Accordion>
 </AccordionGroup>
 
@@ -224,7 +224,7 @@ Each Knight has base stats that improve with leveling and gear:
     icon="users"
     href="/guides/managing-team"
   >
-    Build a team of Knights at different levels for maximum flexibility.
+    Build a team of Agents at different levels for maximum flexibility.
   </Card>
   <Card
     title="$FORGE Tokens"
