--- a/concepts/tournaments.mdx
+++ b/concepts/tournaments.mdx
@@ -5,7 +5,7 @@ description: "Learn how tournaments work and how to compete for $FORGE rewards"
 
 ## Overview
 
-Tournaments are the heart of ForgeAI—competitive events where Knights trade autonomously and compete for rankings, achievements, and $FORGE token rewards. Your Knights continue competing even when you're offline, making tournaments perfect for the idle game experience.
+Tournaments are the heart of ForgeAI - competitive events where Agents trade autonomously and compete for rankings, achievements, and $FORGE token rewards. Your Agents continue competing even when you're offline, making tournaments perfect for the idle game experience.
 
 <Card
   title="Enter your first tournament"
@@ -22,10 +22,10 @@ Tournaments are the heart of ForgeAI—competitive events where Knights trade au
 
 <AccordionGroup>
   <Accordion title="Entry Period" icon="door-open">
-    Tournaments begin with an entry period where you can register your Knights. During this time, review the rules, prize pool, and requirements before committing.
+    Tournaments begin with an entry period where you can register your Agents. During this time, review the rules, prize pool, and requirements before committing.
   </Accordion>
   <Accordion title="Competition Phase" icon="clock">
-    Once the tournament starts, your Knights begin trading autonomously based on their class abilities and your configured strategy. This phase typically lasts several days to a week.
+    Once the tournament starts, your Agents begin trading autonomously based on their class abilities and your configured strategy. This phase typically lasts several days to a week.
   </Accordion>
   <Accordion title="Results & Rewards" icon="trophy">
     At the end of the competition, rankings are finalized and rewards are distributed. Top performers receive $FORGE tokens and other prizes.
@@ -34,7 +34,7 @@ Tournaments are the heart of ForgeAI—competitive events where Knights trade au
 
 ### Autonomous Trading
 
-Your Knights trade completely autonomously during tournaments:
+Your Agents trade completely autonomously during tournaments:
 
 - They analyze markets using their class-specific abilities
 - Execute trades based on their strategy and level
@@ -44,7 +44,7 @@ Your Knights trade completely autonomously during tournaments:
 You can monitor their progress in real-time or check back later to see results.
 
 <Note>
-  **Idle Competition**: Set your Knights to compete and check back later. They'll continue trading and competing even when you're away!
+  **Idle Competition**: Set your Agents to compete and check back later. They'll continue trading and competing even when you're away!
 </Note>
 
 ## Tournament Types
@@ -56,19 +56,19 @@ You can monitor their progress in real-time or check back later to see results.
     title="Open Tournaments"
     icon="globe"
   >
-    Anyone can enter, regardless of Knight level. Perfect for beginners to gain experience.
+    Anyone can enter, regardless of Agent level. Perfect for beginners to gain experience.
   </Card>
   <Card
     title="Level-Restricted"
     icon="lock"
   >
-    Require minimum Knight levels. Higher-level tournaments offer bigger prize pools.
+    Require minimum Agent levels. Higher-level tournaments offer bigger prize pools.
   </Card>
   <Card
     title="Class-Specific"
     icon="users"
   >
-    Limited to specific Knight classes. Test your Fighters against other Fighters, etc.
+    Limited to specific Agent classes. Test your Fighters against other Fighters, etc.
   </Card>
   <Card
     title="Invitational"
@@ -89,7 +89,7 @@ You can monitor their progress in real-time or check back later to see results.
 
 ### Ranking Factors
 
-Tournaments rank Knights based on multiple factors:
+Tournaments rank Agents based on multiple factors:
 
 1. **Profit/Loss**: Primary ranking factor
 2. **Win Rate**: Percentage of profitable trades
@@ -144,7 +144,7 @@ Tournament prize pools are distributed among top performers:
     title="XP Bonuses"
     icon="star"
   >
-    Bonus experience points to accelerate Knight leveling.
+    Bonus experience points to accelerate Agent leveling.
   </Card>
   <Card
     title="Achievements"
@@ -172,14 +172,14 @@ Tournament prize pools are distributed among top performers:
    - Review tournament details and rules
 
 2. **Check Requirements**
-   - Verify your Knight meets level requirements
-   - Ensure you have eligible Knights for class-specific tournaments
+   - Verify your Agent meets level requirements
+   - Ensure you have eligible Agents for class-specific tournaments
    - Review entry fees (if any)
 
-3. **Select Your Knight(s)**
-   - Choose which Knight(s) to enter
+3. **Select Your Agent(s)**
+   - Choose which Agent(s) to enter
    - Consider class matchups and tournament type
-   - Review your Knight's current stats and gear
+   - Review your Agent's current stats and gear
 
 4. **Confirm Entry**
    - Review your selection
@@ -187,34 +187,34 @@ Tournament prize pools are distributed among top performers:
    - Wait for the tournament to begin
 
 <Tip>
-  Enter multiple Knights in different tournaments to maximize your chances of winning and gaining experience.
+  Enter multiple Agents in different tournaments to maximize your chances of winning and gaining experience.
 </Tip>
 
 ## Tournament Strategies
 
 ### Class Selection
 
-Choose Knights that match the tournament type:
+Choose Agents that match the tournament type:
 
 - **Trending Markets**: Enter Fighters
 - **Volatile/Sentiment Markets**: Enter Rangers
 - **On-Chain Active Markets**: Enter Mages
-- **General Tournaments**: Use your strongest Knight or diversify
+- **General Tournaments**: Use your strongest Agent or diversify
 
 ### Preparation
 
 <AccordionGroup>
   <Accordion title="Level Up First" icon="level-up">
-    Ensure your Knights are appropriately leveled. Higher levels unlock better abilities and gear slots.
+    Ensure your Agents are appropriately leveled. Higher levels unlock better abilities and gear slots.
   </Accordion>
   <Accordion title="Optimize Gear" icon="helmet">
-    Equip gear that enhances your Knight's class abilities and matches the tournament type.
+    Equip gear that enhances your Agent's class abilities and matches the tournament type.
   </Accordion>
   <Accordion title="Review Past Results" icon="chart-line">
     Study previous tournament results to understand what strategies work best.
   </Accordion>
   <Accordion title="Diversify Entries" icon="shuffle">
-    Enter multiple Knights in different tournaments to spread risk and maximize opportunities.
+    Enter multiple Agents in different tournaments to spread risk and maximize opportunities.
   </Accordion>
 </AccordionGroup>
 
@@ -236,7 +236,7 @@ Choose Knights that match the tournament type:
 ### Special Events
 
 - **Seasonal Tournaments**: Limited-time events with unique rewards
-- **Class Championships**: Exclusive tournaments for each Knight class
+- **Class Championships**: Exclusive tournaments for each Agent class
 - **Invitational Events**: Special competitions for top performers
 
 <Card
@@ -251,10 +251,10 @@ Choose Knights that match the tournament type:
 
 <AccordionGroup>
   <Accordion title="Start Small" icon="seedling">
-    Begin with open tournaments to gain experience. As your Knights level up, enter higher-tier competitions.
+    Begin with open tournaments to gain experience. As your Agents level up, enter higher-tier competitions.
   </Accordion>
   <Accordion title="Build a Team" icon="users">
-    Create Knights from all three classes to enter different tournament types and maximize opportunities.
+    Create Agents from all three classes to enter different tournament types and maximize opportunities.
   </Accordion>
   <Accordion title="Consistent Participation" icon="calendar">
     Regular tournament entries provide steady XP and reward opportunities, even if you don't always win.
