--- a/guides/managing-team.mdx
+++ b/guides/managing-team.mdx
@@ -1,26 +1,26 @@
 ---
 title: "Managing Your Team"
-description: "Build and manage a diverse team of Knights for maximum success"
+description: "Build and manage a diverse team of Agents for maximum success"
 ---
 
 ## Overview
 
-Successful ForgeAI players build diverse teams of Knights from different classes. This guide covers team composition, management strategies, and optimization techniques.
+Successful ForgeAI players build diverse teams of Agents from different classes. This guide covers team composition, management strategies, and optimization techniques.
 
 <Card
-  title="Create Your First Knight"
+  title="Create Your First Agent"
   icon="plus-circle"
-  href="/guides/creating-knights"
+  href="/guides/creating-agents"
   horizontal
 >
-  Need to create Knights? Follow our creation guide.
+  Need to create Agents? Follow our creation guide.
 </Card>
 
 ## Team Composition
 
 ### The Balanced Team
 
-An ideal team includes Knights from all three classes:
+An ideal team includes Agents from all three classes:
 
 <Columns cols={3}>
   <Card
@@ -50,7 +50,7 @@ An ideal team includes Knights from all three classes:
     Different tournaments favor different classes. A diverse team lets you enter class-specific tournaments and adapt to various competition types.
   </Accordion>
   <Accordion title="Market Adaptation" icon="chart-line">
-    Market conditions change. Having all three classes ensures you always have Knights suited to current conditions.
+    Market conditions change. Having all three classes ensures you always have Agents suited to current conditions.
   </Accordion>
   <Accordion title="Risk Management" icon="shield">
     Diversifying across classes spreads risk. If one class struggles in certain conditions, others can compensate.
@@ -64,54 +64,54 @@ An ideal team includes Knights from all three classes:
 
 ### Starting Out
 
-**Phase 1: Your First Knight (Levels 1-10)**
-- Create one Knight (recommend Fighter for beginners)
+**Phase 1: Your First Agent (Levels 1-10)**
+- Create one Agent (recommend Fighter for beginners)
 - Focus on learning the game mechanics
 - Enter open tournaments to gain experience
 - Reach Level 10 to unlock core abilities
 
 **Phase 2: Expand to Two Classes (Levels 10-20)**
-- Create a Knight from a different class
+- Create a Agent from a different class
 - Learn the differences between classes
 - Enter class-specific tournaments
-- Build both Knights to Level 20
+- Build both Agents to Level 20
 
 **Phase 3: Complete Your Team (Levels 20+)**
-- Create your third Knight from the remaining class
+- Create your third Agent from the remaining class
 - Now you have all three classes
 - Enter diverse tournament types
-- Specialize each Knight for their class strengths
+- Specialize each Agent for their class strengths
 
 ### Team Size Strategy
 
 <Columns cols={2}>
   <Card
-    title="Small Team (3-5 Knights)"
+    title="Small Team (3-5 Agents)"
     icon="users"
   >
     **Best for**: Beginners, focused players
     
-    - One Knight per class
+    - One Agent per class
     - Easy to manage
     - Focus on quality over quantity
   </Card>
   <Card
-    title="Medium Team (6-10 Knights)"
+    title="Medium Team (6-10 Agents)"
     icon="users"
   >
     **Best for**: Active players, tournament enthusiasts
     
-    - Multiple Knights per class
+    - Multiple Agents per class
     - Enter multiple tournaments simultaneously
-    - Specialize Knights for specific strategies
+    - Specialize Agents for specific strategies
   </Card>
   <Card
-    title="Large Team (10+ Knights)"
+    title="Large Team (10+ Agents)"
     icon="users"
   >
     **Best for**: Advanced players, competitive focus
     
-    - Highly specialized Knights
+    - Highly specialized Agents
     - Maximum tournament coverage
     - Requires active management
   </Card>
@@ -121,7 +121,7 @@ An ideal team includes Knights from all three classes:
   >
     **Best for**: Focused strategies
     
-    - Multiple Knights of one class
+    - Multiple Agents of one class
     - Master a specific approach
     - Dominate class-specific tournaments
   </Card>
@@ -133,17 +133,17 @@ An ideal team includes Knights from all three classes:
 
 <AccordionGroup>
   <Accordion title="Balanced Levels" icon="scale">
-    Keep all Knights at similar levels. This ensures you can enter the same tier tournaments with any Knight.
+    Keep all Agents at similar levels. This ensures you can enter the same tier tournaments with any Agent.
     
     **Best for**: General play, flexibility
   </Accordion>
   <Accordion title="Specialized Levels" icon="target">
-    Focus on leveling one Knight to high levels first, then level others. The high-level Knight can enter elite tournaments.
+    Focus on leveling one Agent to high levels first, then level others. The high-level Agent can enter elite tournaments.
     
-    **Best for**: Competitive players, maximizing one Knight
+    **Best for**: Competitive players, maximizing one Agent
   </Accordion>
   <Accordion title="Class Specialization" icon="users">
-    Level Knights of one class higher than others. Dominate class-specific tournaments.
+    Level Agents of one class higher than others. Dominate class-specific tournaments.
     
     **Best for**: Players who prefer specific strategies
   </Accordion>
@@ -156,25 +156,25 @@ An ideal team includes Knights from all three classes:
     title="Diversify Entries"
     icon="shuffle"
   >
-    Enter different Knights in different tournaments. Spread your chances and gain diverse experience.
+    Enter different Agents in different tournaments. Spread your chances and gain diverse experience.
   </Card>
   <Card
     title="Focus Fire"
     icon="target"
   >
-    Enter your best Knight in high-value tournaments. Maximize chances of winning big prizes.
+    Enter your best Agent in high-value tournaments. Maximize chances of winning big prizes.
   </Card>
   <Card
     title="Class Matching"
     icon="check-circle"
   >
-    Match Knight classes to tournament types. Fighters for trend tournaments, Rangers for sentiment, etc.
+    Match Agent classes to tournament types. Fighters for trend tournaments, Rangers for sentiment, etc.
   </Card>
   <Card
     title="Experiment"
     icon="flask"
   >
-    Try different Knight-tournament combinations. Learn what works through experimentation.
+    Try different Agent-tournament combinations. Learn what works through experimentation.
   </Card>
 </Columns>
 
@@ -184,13 +184,13 @@ An ideal team includes Knights from all three classes:
 
 <AccordionGroup>
   <Accordion title="Class-Appropriate Gear" icon="helmet">
-    Equip each Knight with gear that enhances their class abilities:
+    Equip each Agent with gear that enhances their class abilities:
     - **Fighters**: Technical analysis tools
     - **Rangers**: Sentiment analysis equipment
     - **Mages**: On-chain data processors
   </Accordion>
-  <Accordion title="Best Gear to Best Knights" icon="star">
-    Prioritize your strongest Knights when distributing rare gear. Maximize your competitive advantage.
+  <Accordion title="Best Gear to Best Agents" icon="star">
+    Prioritize your strongest Agents when distributing rare gear. Maximize your competitive advantage.
   </Accordion>
   <Accordion title="Specialized Loadouts" icon="suitcase">
     Create different gear loadouts for different tournament types. Switch gear based on competition requirements.
@@ -202,13 +202,13 @@ An ideal team includes Knights from all three classes:
 <AccordionGroup>
   <Accordion title="$FORGE Allocation" icon="coins">
     Balance spending $FORGE across your team:
-    - Don't overspend on one Knight
-    - Invest in gear that benefits multiple Knights
+    - Don't overspend on one Agent
+    - Invest in gear that benefits multiple Agents
     - Save for high-value opportunities
   </Accordion>
   <Accordion title="XP Focus" icon="level-up">
-    Decide which Knights to prioritize for leveling:
-    - Focus on your strongest Knight for elite tournaments
+    Decide which Agents to prioritize for leveling:
+    - Focus on your strongest Agent for elite tournaments
     - Level others to unlock tournament access
     - Balance based on your goals
   </Accordion>
@@ -223,7 +223,7 @@ An ideal team includes Knights from all three classes:
     title="Check Progress"
     icon="chart-line"
   >
-    Regularly review each Knight's performance, XP, and level progress.
+    Regularly review each Agent's performance, XP, and level progress.
   </Card>
   <Card
     title="Update Gear"
@@ -235,7 +235,7 @@ An ideal team includes Knights from all three classes:
     title="Enter Tournaments"
     icon="trophy"
   >
-    Keep Knights active by entering tournaments regularly. Idle Knights don't progress.
+    Keep Agents active by entering tournaments regularly. Idle Agents don't progress.
   </Card>
   <Card
     title="Review Strategies"
@@ -249,8 +249,8 @@ An ideal team includes Knights from all three classes:
 
 Track and analyze:
 
-- **Win Rates**: Which Knights perform best?
-- **Tournament Types**: Which tournaments suit which Knights?
+- **Win Rates**: Which Agents perform best?
+- **Tournament Types**: Which tournaments suit which Agents?
 - **Class Performance**: Are certain classes outperforming others?
 - **Gear Impact**: How does gear affect performance?
 
@@ -262,13 +262,13 @@ Use this data to optimize your team composition and strategy.
 
 <AccordionGroup>
   <Accordion title="Tournament Specialists" icon="trophy">
-    Build Knights specifically optimized for certain tournament types. Create loadouts and strategies for each tournament format.
+    Build Agents specifically optimized for certain tournament types. Create loadouts and strategies for each tournament format.
   </Accordion>
   <Accordion title="Market Condition Teams" icon="chart-line">
     Maintain different teams for different market conditions. Switch focus based on current market state.
   </Accordion>
   <Accordion title="Risk Diversification" icon="shield">
-    Balance high-risk/high-reward Knights with steady performers. Diversify your risk profile.
+    Balance high-risk/high-reward Agents with steady performers. Diversify your risk profile.
   </Accordion>
 </AccordionGroup>
 
@@ -276,16 +276,16 @@ Use this data to optimize your team composition and strategy.
 
 <AccordionGroup>
   <Accordion title="Neglecting Diversity" icon="exclamation-triangle">
-    Don't create all Knights from one class. You'll miss opportunities in class-specific tournaments.
+    Don't create all Agents from one class. You'll miss opportunities in class-specific tournaments.
   </Accordion>
   <Accordion title="Overextending" icon="users">
-    Don't create too many Knights too quickly. Focus on quality and learning before expanding.
+    Don't create too many Agents too quickly. Focus on quality and learning before expanding.
   </Accordion>
-  <Accordion title="Ignoring Weak Knights" icon="user-slash">
-    Don't abandon underperforming Knights. They may excel in different conditions or tournaments.
+  <Accordion title="Ignoring Weak Agents" icon="user-slash">
+    Don't abandon underperforming Agents. They may excel in different conditions or tournaments.
   </Accordion>
   <Accordion title="Poor Resource Allocation" icon="coins">
-    Don't spend all resources on one Knight. Balance investments across your team.
+    Don't spend all resources on one Agent. Balance investments across your team.
   </Accordion>
 </AccordionGroup>
 
@@ -293,11 +293,11 @@ Use this data to optimize your team composition and strategy.
 
 <CardGroup cols={2}>
   <Card
-    title="Create Knights"
+    title="Create Agents"
     icon="plus-circle"
-    href="/guides/creating-knights"
+    href="/guides/creating-agents"
   >
-    Learn how to create and customize your Knights.
+    Learn how to create and customize your Agents.
   </Card>
   <Card
     title="Tournament Strategies"
@@ -311,7 +311,7 @@ Use this data to optimize your team composition and strategy.
     icon="level-up"
     href="/concepts/progression"
   >
-    Understand how to level up and optimize your Knights.
+    Understand how to level up and optimize your Agents.
   </Card>
   <Card
     title="Tournaments"
