--- a/guides/strategies.mdx
+++ b/guides/strategies.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Tournament Strategies"
-description: "Advanced strategies for maximizing your Knight's tournament performance"
+description: "Advanced strategies for maximizing your Agent's tournament performance"
 ---
 
 ## Overview
 
-Success in ForgeAI tournaments requires understanding your Knight's class, the tournament type, and market conditions. This guide covers advanced strategies for each class and tournament scenario.
+Success in ForgeAI tournaments requires understanding your Agent's class, the tournament type, and market conditions. This guide covers advanced strategies for each class and tournament scenario.
 
 <Card
   title="Enter Your First Tournament"
@@ -55,7 +55,7 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
 <Card
   title="Learn About Fighters"
   icon="sword"
-  href="/concepts/knights#fighters"
+  href="/concepts/agents#fighters"
 >
   Deep dive into Fighter class abilities.
 </Card>
@@ -97,7 +97,7 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
 <Card
   title="Learn About Rangers"
   icon="bow-arrow"
-  href="/concepts/knights#rangers"
+  href="/concepts/agents#rangers"
 >
   Deep dive into Ranger class abilities.
 </Card>
@@ -139,7 +139,7 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
 <Card
   title="Learn About Mages"
   icon="wand-magic-sparkles"
-  href="/concepts/knights#mages"
+  href="/concepts/agents#mages"
 >
   Deep dive into Mage class abilities.
 </Card>
@@ -179,7 +179,7 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
 
 <AccordionGroup>
   <Accordion title="Beginner Tournaments" icon="seedling">
-    **Strategy:** Enter multiple Knights to gain experience
+    **Strategy:** Enter multiple Agents to gain experience
     
     - Lower stakes, less competition
     - Focus on learning and XP
@@ -187,7 +187,7 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
     - Experiment with different strategies
   </Accordion>
   <Accordion title="Intermediate Tournaments" icon="tree">
-    **Strategy:** Enter your best-performing Knights
+    **Strategy:** Enter your best-performing Agents
     
     - Better prize pools
     - More competition
@@ -195,11 +195,11 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
     - Focus on consistent performance
   </Accordion>
   <Accordion title="Elite Tournaments" icon="mountain">
-    **Strategy:** Enter only your strongest, best-equipped Knights
+    **Strategy:** Enter only your strongest, best-equipped Agents
     
     - Highest prize pools
     - Top competition
-    - Requires high-level Knights with optimal gear
+    - Requires high-level Agents with optimal gear
     - Use your most refined strategies
   </Accordion>
 </AccordionGroup>
@@ -243,7 +243,7 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
 
 ## Advanced Tactics
 
-### Multi-Knight Strategies
+### Multi-Agent Strategies
 
 <AccordionGroup>
   <Accordion title="Diversification" icon="shuffle">
@@ -253,13 +253,13 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
     - Learn which classes work in which conditions
   </Accordion>
   <Accordion title="Focus Fire" icon="target">
-    Enter multiple Knights of the same class in one tournament:
+    Enter multiple Agents of the same class in one tournament:
     - Increase chances of winning
     - Test different strategies within same class
     - Dominate class-specific tournaments
   </Accordion>
   <Accordion title="Specialization" icon="star">
-    Specialize each Knight for specific tournament types:
+    Specialize each Agent for specific tournament types:
     - Optimize gear for tournament type
     - Develop class-specific strategies
     - Build expertise in chosen areas
@@ -284,7 +284,7 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
   >
     Time entries based on:
     - Market conditions
-    - Knight readiness
+    - Agent readiness
     - Tournament schedule
     - Personal availability
   </Card>
@@ -310,7 +310,7 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
   <Accordion title="Aggressive" icon="fire">
     Focus on high-tier tournaments:
     - Higher risk, higher reward
-    - Requires strong Knights
+    - Requires strong Agents
     - Potential for big wins
   </Accordion>
 </AccordionGroup>
@@ -323,7 +323,7 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
     - Was it the wrong class for the tournament?
     - Were market conditions unfavorable?
     - Did gear need optimization?
-    - Was the Knight under-leveled?
+    - Was the Agent under-leveled?
   </Accordion>
   <Accordion title="Adapt Strategy" icon="arrows-rotate">
     Adjust based on results:
@@ -389,12 +389,12 @@ Success in ForgeAI tournaments requires understanding your Knight's class, the t
     icon="level-up"
     href="/concepts/progression"
   >
-    Level up your Knights and unlock abilities.
+    Level up your Agents and unlock abilities.
   </Card>
   <Card
-    title="Knight Classes"
+    title="Agent Classes"
     icon="robot"
-    href="/concepts/knights"
+    href="/concepts/agents"
   >
     Deep dive into each class and their abilities.
   </Card>
