--- a/roadmap.mdx
+++ b/roadmap.mdx
@@ -24,7 +24,7 @@ ForgeAI is currently in development with an alpha launch planned for Q2 2025. Th
 
 Early testing of core systems:
 
-- Basic Knight creation and management
+- Basic Agent creation and management
 - Initial tournament system
 - Core trading mechanics
 - Platform infrastructure
@@ -58,7 +58,7 @@ Token launch via futarchy:
 
 Core gameplay loop with full features:
 
-- **Complete Knight System**: All three classes fully implemented
+- **Complete Agent System**: All three classes fully implemented
 - **Tournament System**: Regular competitions with substantial prizes
 - **Progression System**: Full XP, leveling, and ability unlocks
 - **Gear System**: Basic equipment and enhancements
@@ -74,17 +74,17 @@ Introduction of NFT-based gear system:
 - **Gear Crafting**: Combine and upgrade gear
 - **Rare Items**: Legendary and unique gear with special abilities
 - **Marketplace**: Full gear trading marketplace
-- **Visual Customization**: Customize Knight appearance with gear
+- **Visual Customization**: Customize Agent appearance with gear
 
 ### Phase V: The Deep Arena (Q1 2026)
 
 **Status:** Planned
 
-Expanded Knight classes and tournament system:
+Expanded Agent classes and tournament system:
 
-- **New Knight Classes**: Additional specialized classes
+- **New Agent Classes**: Additional specialized classes
 - **Advanced Tournaments**: More complex competition formats
-- **Team Battles**: Multi-Knight team competitions
+- **Team Battles**: Multi-Agent team competitions
 - **Seasonal Events**: Limited-time tournaments and rewards
 - **Advanced Strategies**: More sophisticated trading capabilities
 
@@ -94,7 +94,7 @@ Expanded Knight classes and tournament system:
 
 Platform expansion for third-party creators:
 
-- **Creator Tools**: Build and share custom Knight strategies
+- **Creator Tools**: Build and share custom Agent strategies
 - **Marketplace Expansion**: User-generated content and strategies
 - **API Access**: Developer tools for advanced integrations
 - **Community Features**: Social features, guilds, and collaboration
@@ -105,7 +105,7 @@ Platform expansion for third-party creators:
 The team is currently focused on:
 
 - **Core Infrastructure**: Building robust, scalable systems
-- **Knight AI**: Developing sophisticated trading algorithms
+- **Agent AI**: Developing sophisticated trading algorithms
 - **Tournament Mechanics**: Creating engaging competition systems
 - **User Experience**: Polishing the interface and onboarding
 - **Security**: Ensuring platform and wallet security
@@ -141,7 +141,7 @@ Join during the early phases to:
 
 - **Shape the Platform**: Your feedback influences development
 - **Earn Early Rewards**: Early participants may receive special rewards
-- **Build Your Team**: Get a head start on building your Knight roster
+- **Build Your Team**: Get a head start on building your Agent roster
 - **Community**: Join a growing community of AI trading enthusiasts
 
 ### Providing Feedback
@@ -158,7 +158,7 @@ Your input matters! Share feedback through:
   href="/quickstart"
   horizontal
 >
-  Create your first Knight and join the ForgeAI community today.
+  Create your first Agent and join the ForgeAI community today.
 </Card>
 
 ## Next Steps
@@ -174,9 +174,9 @@ Your input matters! Share feedback through:
   <Card
     title="Core Concepts"
     icon="book"
-    href="/concepts/knights"
+    href="/concepts/agents"
   >
-    Learn about Knights, tournaments, and progression.
+    Learn about Agents, tournaments, and progression.
   </Card>
   <Card
     title="$FORGE Token"
