--- a/wallet-setup.mdx
+++ b/wallet-setup.mdx
@@ -188,11 +188,11 @@ When you win tournaments, $FORGE tokens are automatically sent to your connected
 
 <CardGroup cols={2}>
   <Card
-    title="Create Your First Knight"
+    title="Create Your First Agent"
     icon="robot"
     href="/quickstart"
   >
-    Now that your wallet is connected, create your first Knight.
+    Now that your wallet is connected, create your first Agent.
   </Card>
   <Card
     title="Enter a Tournament"
